Fix CSRF validation behind Nginx and bake API URL into web image

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -123,6 +123,7 @@ jobs:
           chmod 600 /tmp/ec2_key.pem
           ssh -o StrictHostKeyChecking=no -i /tmp/ec2_key.pem $EC2_USER@$EC2_HOST << 'EOF'
             cd /opt/sentinelcloud
+            docker-compose down --remove-orphans || true
             docker-compose pull
             docker-compose up -d
           EOF
